test/expected/explain_ubi0.out
explain unsigned _BitInt(0) x
        ^
9: error: unsigned _BitInt must be at least 1 bit
